testPypi first commit

--- a/maldi.ini
+++ b/maldi.ini
@@ -1,43 +1,37 @@
 [file]
-;name=IMS199_OTD200_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMSMS_8K_MALDI.csv
-;name=C:\Users\cmadrid\Downloads\carlos\DATA\withTrypsin\IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_wTrypsin_4K_MALDI.csv
-;name=C:\Users\cmadrid\EinsteinMed Dropbox\Carlos Madrid\MALDI-MSI_Thymus\Program-For-Mapping\IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_4K_LCMS.csv
-name=C:\\DATA\199-196\4K\IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_4K_MALDI.csv
-
-; specify if m/z should be rounded to the nearest integer before performing 
-; the m/z comparison. 
-;[round_mz]
-;value=False
-;column_name=rounded_mz
+; Specify the full file path of the MALDI CSV file that contains your data.
+; This file is used as input for comparison with LCMS data.
+name=/home/cmadrid/DATA/199-196/4K/IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_4K_MALDI.csv
 
 [round_mz]
+; Determine whether the m/z values should be rounded to the nearest integer 
+; before comparing them with LCMS data. Set to "True" to round m/z value
 value=True
 column_name=rounded_mz
 
 [mz_column_name]
+; Specify the name of the column that hold the m/z values in the CSV file.
 name=${column_names:column1}
 
 [verbose]
+; Enable or disable verbose output during the process.
+; Set to "True" for detailed logs to help with troubleshooting or understanding the process.
 value=True
 
-[output_file]
-name=George_IMS196_OTD_with_Trypsin_Aug_2024_peptides_4K_0.5
+;[output_file]
+;name=George_IMS196_OTD_with_Trypsin_Aug_2024_peptides_4K_0.5
 
 [column_names]
+; Define the names of the columns in the MALDI CSV file. These column names will be used for data extraction.
 column1=m/z
 column2=Average
 column3=IMS199_Chemo_Left_4K
 column4=IMS199_Control_Right_Bottom_4K
 column5=IMS199_Control_Right_Top_4K
 
-;[order_columns]
-;column1=${column_names:column1}
-;column2=${column_names:column2}
-;column3=${column_names:column3}
-;column4=${column_names:column4}
-;column5=${column_names:column5}
-
 [order_columns]
+; Specify the order in which columns should appear in the output file.
+; The columns will be printed in the specified order, with optional modifications such as rounded m/z.
 column1=${column_names:column1}
 column2=${round_mz:column_name}
 column3=${column_names:column2}
