--- a/lcms.ini
+++ b/lcms.ini
@@ -1,14 +1,9 @@
 [file]
-;name=IMS199_GK_Thymus_ChemoL_v_CtrlR_run1 - Match MALDI with LC-MS_043023_LCMS.csv
-;name=IMS199_OTD200_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMSMS_8K_LCMS.csv
-;name=C:\Users\cmadrid\Downloads\carlos\DATA\withTrypsin\IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_wTrypsin_4K_LCMS.csv
-;name=C:\Users\cmadrid\EinsteinMed Dropbox\Carlos Madrid\MALDI-MSI_Thymus\Program-For-Mapping\DATA\DATA\199-196\4K\IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_4K_LCMS.csv"
-name=C:\DATA\withTrypsin\IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_wTrypsinR05_4K_Oct2024_LCMS.csv
+; specify the location of the LCMS csv file
+name=/home/cmadrid/DATA/withTrypsin/IMS199_OTD196_GK_Thymus_ChemoL_v_CtrlR_MALDI_Match_LCMS_wTrypsinR05_4K_Oct2024_LCMS.csv
 
-;[round_mz]
-;value=False
-;column_name=rounded_mz
-
+; specify if m/z should be rounded to the nearest integer before performing 
+; the m/z comparison. 
 [round_mz]
 value=True
 column_name=rounded_mz
@@ -44,16 +39,4 @@ column7=${column_names:column6}
 column8=${column_names:column7}
 column9=${column_names:column8}
 column10=${column_names:column9}
-
-
-;[order_columns]
-;column1=${column_names:column1}
-;column2=${column_names:column2}
-;column3=${column_names:column3}
-;column4=${column_names:column4}
-;column5=${column_names:column5}
-;column6=${column_names:column6}
-;column7=${column_names:column7}
-;column8=${column_names:column8}
-;column9=${column_names:column9}
 
